Bug 490795 - Kirigami.Icon renders some icons in lightened monochrome form
Summary: Kirigami.Icon renders some icons in lightened monochrome form
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-24 20:46 UTC by Nate Graham
Modified: 2024-07-26 11:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Notifications KCM main page header buttons (463.98 KB, image/png)
2024-07-24 20:46 UTC, Nate Graham
Details
Notifications KCM app page app icon (446.54 KB, image/png)
2024-07-24 20:47 UTC, Nate Graham
Details
System Monitor "Quit Application" button (343.48 KB, image/png)
2024-07-24 20:47 UTC, Nate Graham
Details
Other random-seeming buttons in System Monitor (511.18 KB, image/png)
2024-07-24 20:50 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-07-24 20:46:21 UTC
I have not managed to figure out the pattern yet, but there are some parts of System Settings and System Monitor that consistently display *some* of their icons which are drawn by Kirigami.Icon in a lightened monochrome form. See attached screenshots.

I bisected back to 5334b311 but it never stopped happening.

Everything KDE built from source on top of Fedora 40 KDE and distro-provided Qt 6.7.2
Comment 1 Nate Graham 2024-07-24 20:46:49 UTC
Created attachment 171964 [details]
Notifications KCM main page header buttons
Comment 2 Nate Graham 2024-07-24 20:47:20 UTC
Created attachment 171965 [details]
Notifications KCM app page app icon
Comment 3 Nate Graham 2024-07-24 20:47:50 UTC
Created attachment 171966 [details]
System Monitor "Quit Application" button
Comment 4 Nate Graham 2024-07-24 20:50:01 UTC
Created attachment 171967 [details]
Other random-seeming buttons in System Monitor
Comment 5 Nicolas Fella 2024-07-24 20:58:26 UTC
Might be caused by https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/145
Comment 8 Nicolas Fella 2024-07-26 11:34:35 UTC
Git commit 3caa03c2ca0eac54abeffe8074281c7519c0ca3e by Nicolas Fella.
Committed on 26/07/2024 at 00:06.
Pushed by nicolasfella into branch 'master'.

Add back effect into cache key

ce83f4a47b355f73f45b7b2dd7dd1760ca4038ea dropped the effect information from makeCacheKey,
but we need it to make sure we get the right pixmap when an icon is requested in different states

M  +24   -0    autotests/kiconengine_unittest.cpp
M  +10   -0    src/kiconloader.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/3caa03c2ca0eac54abeffe8074281c7519c0ca3e