Add back effect into cache key

ce83f4a47b355f73f45b7b2dd7dd1760ca4038ea dropped the effect information from makeCacheKey,
but we need it to make sure we get the right pixmap when an icon is requested in different states

BUG: 490795